syntax = "proto3";
import "consts.proto";
package proto;
option go_package = "/proto";

message Equipment {
    int32 weapon = 1;
    int32 armor = 2;
    int32 helmet = 3;
    int32 necklace = 4;
    int32 ring = 5;
    int32 belt = 6;
    int32 shoes = 7;
    int32 amulet = 8;
    int32 legguard = 9;
}

message Item {
    string id = 1;
    int32 count = 2;
}

message Bag {
    map<string, Item> items = 1;
}

message Skill {
    int32 id = 1;
    int32 level = 2;
    string type = 3;
}

message Skills {
    map<string, Skill> fight_skills = 1;
}

message Task {
    int32 id = 1;
    int32 kind_id = 2;
    int32 task_state = 3;
    int64 start_time = 4;
    string task_data = 5;
}

message Tasks {
    map<int32, Task> game_tasks = 1;
}

message User {
    string name = 1;
    string user_id = 2;
    string pic = 3;
    RoleType role_id = 4;
    string role_name = 5;
    string country = 6;
    int32 rank = 7;
    int32 level = 8;
    int32 experience = 9;
    int32 attack_value = 10;
    int32 defence_value = 11;
    int32 hit_rate = 12;
    int32 dodge_rate = 13;
    int32 walk_speed = 14;
    int32 attack_speed = 15;
    int32 hp = 16;
    int32 mp = 17;
    int32 max_hp = 18;
    int32 max_mp = 19;
    int32 area_id = 20;
    int32 x = 21;
    int32 y = 22;
    Equipment equipment = 23;
    Bag bag = 24;
    Skills skills = 25;
    Tasks tasks = 26;
}
